# MarkoViz

./: .gitignore  README.md  pyproject.toml
ib_downloader/: downloader.py
notebooks/: main.py
src/: enums.py  main.py
tests/: test_downloader.py
